--- a/suse2013-sbp/static/css/style.css
+++ b/suse2013-sbp/static/css/style.css
@@ -245,8 +245,8 @@ html, body {
 
 .toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, .overview-icon,
 .back-icon, #_find-button, .bubble-corner:before, .bubble-closer,
-.single-contents-icon, #_print-button:before, #_share-fb:before,
-#_share-in:before, #_share-tw:before, #_share-mail:before,
+.single-contents-icon, ._print-button:before, ._share-fb:before,
+._share-in:before, ._share-tw:before, ._share-mail:before,
 .arch-arrow-start:after, .arch-arrow-end, .ulink:after, .link:after {
     background-image: url(../images/icons.png);
     background-repeat: no-repeat;
@@ -781,7 +781,7 @@ a:active > .find-icon {
 
 .arrow {
     position: absolute;
-    right: -0px;
+    right: 0;
     top: 0;
     display: block;
     width: 30px;
@@ -987,7 +987,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     padding: 10px 20px 0;
 }
 
-#_bottom-navigation {
+._bottom-navigation {
     border-top: 1px solid #999;
 }
 
@@ -1056,8 +1056,8 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     font-weight: 600;
 }
 
-#_share-fb:before, #_share-in:before, #_share-tw:before, #_share-mail:before,
-#_print-button:before {
+._share-fb:before, ._share-in:before, ._share-tw:before, ._share-mail:before,
+._print-button:before {
     content: " ";
     line-height: 22px;
     font-size: 14px;
@@ -1073,27 +1073,27 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     overflow: hidden;
 }
 
-#_share-fb:before {
+._share-fb:before {
     background-color: #3B5998;
     background-position: -271px -88px;
 }
 
-#_share-in:before {
+._share-in:before {
     background-color: #0073B1;
     background-position: -289px -88px;
 }
 
-#_share-tw:before {
+._share-tw:before {
     background-color: #00BBF5;
     background-position: -307px -88px;
 }
 
-#_share-mail:before {
+._share-mail:before {
     background-color: #666;
     background-position: -235px -88px;
 }
 
-#_print-button:before {
+._print-button:before {
     background-color: #666;
     background-position: -253px -88px;
 }
@@ -1111,7 +1111,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     border-bottom: 1px solid rgba(20,20,20,0.5);
 }
 
-#_share-print {
+._share-print {
     margin: 20px 0 0 0;
     padding: 20px 0 0 0;
     border-top: 1px solid #999;
@@ -1206,22 +1206,25 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     padding: 0 20px;
 }
 
-
-/* We need to scroll ~30 pixels up, such that the headline won't be hidden by the fixed header. */
-/* [attribute] selector works in IE 7+. Firefox, Opera and Webkit-based browsers had it far earlier. */
-.documentation a[id] {
-    position: relative;
-    top: -33px;
-    display: block;
-    width: 0;
-    height: 0;
+:target::before {
+  content: '';
+  display: block;
+  margin-top: -33px;
+  height: 33px;
+  width: 1px;
 }
 
-[id]:target > span, .admonition[id]:target > h6 {
+/* unfortunately we need these super-specific selectors to avoid highlighting <phrase/> etc. headlines */
+:target > .titlepage:nth-child(1) h1 > span,
+:target > .titlepage:nth-child(1) h2 > span,
+:target > .titlepage:nth-child(1) h3 > span,
+:target > .titlepage:nth-child(1) h4 > span,
+:target > .titlepage:nth-child(1) h5 > span,
+:target > .titlepage:nth-child(1) h6 > span,
+:target > span,
+:target > div:nth-child(1) > h6 > span,
+.admonition:target > h6 {
     background-color: rgba(255,255,0,0.3);
-    /* Clean the below up in Q3 2013 or so... */
-    -webkit-transition: background-color 0.2s ease-out 0.3s;
-    -moz-transition: background-color 0.2s ease-out 0.3s;
     transition: background-color 0.2s ease-out 0.3s;
 }
 
@@ -1365,9 +1368,8 @@ h6.version-info {
 .sect5 .title, .single .sect5 .title {
     font-size: 16px;
     padding: 53px 0 0;
-    margin: 0 0 -33px;
+    margin: 0 0;
     position: relative;
-    top: -33px;
     z-index: 1;
     text-align: left;
 }
@@ -2018,7 +2020,7 @@ catch those. */
     float: right;
 }
 
-.variablelist, .toc {
+div.variablelist, .toc {
     margin: 24px 0;
 }
 
@@ -2029,10 +2031,8 @@ catch those. */
 .variablelist dt, .glossary dt {
     font-weight: 600;
     color: #000;
-    padding-top: 33px;
-    margin: 0 0 -33px;
+    margin: 0;
     position: relative;
-    top: -33px;
     z-index: 1;
 }
 
@@ -2075,11 +2075,10 @@ div.figure {
     max-width: 100%;
     min-height: 60px;
     text-align: center;
-    margin: 24px 0 -9px;
+    margin: 24px 0 0;
     overflow: hidden;
     position: relative;
-    padding-top: 33px;
-    top: -33px;
+    padding-top: 0;
 }
 
 .figure-contents > .mediaobject {
@@ -2182,13 +2181,12 @@ a:hover .package, a:focus .package, a:active .package {
 .table-title, .example-title, .procedure-title,
 .variablelist-title, .itemizedlist-title {
     position: relative;
-    top: -33px;
-    padding-top: 33px;
+    padding-top: 0;
     z-index: 1;
 }
 
 .example-title, .procedure-title, .orderedlist-title {
-    margin: 24px 0 -33px;
+    margin: 24px 0 0;
 }
 
 .qandadiv-title {
@@ -2196,15 +2194,15 @@ a:hover .package, a:focus .package, a:active .package {
 }
 
 .itemizedlist-title {
-    margin: 24px 0 -41px;
+    margin: 24px 0 0;
 }
 
 .table-title {
-    margin: 24px 0 -23px;
+    margin: 24px 0 10px;
 }
 
 .variablelist-title {
-    margin: 24px 0 -50px;
+    margin: 24px 0 10px;
 }
 
 .qandaentry {
@@ -2215,7 +2213,6 @@ a:hover .package, a:focus .package, a:active .package {
 
 .free-id {
     position: relative;
-    top: -33px;
     left: -1px;
     width: 0.01px;
     height: 0.01px;
@@ -2623,7 +2620,7 @@ p.ds-message {
     }
 
     #_fixed-header-wrap, #_toolbar-wrap, #_pickers, #_inward, #_footer-wrap,
-    #_bottom-navigation, #_share-print {
+    ._bottom-navigation, ._share-print {
         display: none;
     }
 
@@ -2631,7 +2628,7 @@ p.ds-message {
         display: none;
     }
 
-    #_share-print {
+    ._share-print {
         visibility: hidden;
     }
 
@@ -2764,7 +2761,7 @@ p.ds-message {
 }
 
 @media only screen and (max-width: 600px) {
-    #_share-print strong {
+    ._share-print strong {
         display: block;
         float: right;
         padding: 0 0 5px;
@@ -3028,7 +3025,7 @@ p.ds-message {
         display: none;
     }
 
-    #_share-print, .share {
+    ._share-print, .share {
         float: none;
     }
 
@@ -3055,17 +3052,17 @@ p.ds-message {
         width: calc(50% - 22px);
     }
 
-    #_share-fb, #_share-tw {
+    ._share-fb, ._share-tw {
         clear: both;
     }
 
-    #_share-fb:before, #_share-in:before, #_share-tw:before, #_share-mail:before {
+    ._share-fb:before, ._share-in:before, ._share-tw:before, ._share-mail:before {
         border-radius: 2px;
         border-width: 1px;
         margin-left: 0;
     }
 
-    .offline #_share-print {
+    .offline ._share-print {
         /* Ugly trick -- the JS would otherwise override my display: none */
         height: 0;
         padding: 0;
