--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -1,5 +1,35 @@
 @charset "utf-8.sass"
 
+// Colors
+
+$c_white:        rgb(255, 255, 255)
+$c_black:        rgb(  0,   0,   0)
+
+$c_fog:          rgb(239, 239, 239)
+$c_fog_200:      rgb(222, 223, 224)
+$c_fog_300:      rgb(192, 194, 196)
+
+$c_pine:         rgb( 12,  50,  44)
+$c_jungle:       rgb( 48, 186, 120)
+
+$c_midnight:     rgb( 25,  32, 114)
+$c_midnight_60:  rgb(117, 122, 167)
+$c_midnight_30:  rgb(187, 189, 212)
+
+$c_waterhole:    rgb( 36,  83, 255)
+$c_waterhole_60: rgb(128, 154, 247)
+$c_waterhole_30: rgb(191, 203, 251)
+
+$c_persimmon:    rgb(254, 124,  63)
+$c_persimmon_60: rgb(243, 178, 146)
+$c_persimmon_30: rgb(249, 218, 200)
+
+$c_mint:         rgb(144, 235, 205)
+$c_mint_60:      rgb(199, 241, 227)
+$c_mint_30:      rgb(227, 248, 241)
+
+
+
 @import "reset.sass"
 
 @import "base.sass"
