--- a/source-assets/styles2020/sass/0-style.sass
+++ b/source-assets/styles2020/sass/0-style.sass
@@ -1,5 +1,25 @@
 @charset "utf-8.sass"
 
+// Colors
+
+$c_pine: #0C322C
+$c_jungle: #30BA78
+$c_seafoam: #7AD4AA
+
+$c_coral: #FF6A52
+$c_salmon: #FF8E77
+
+$c_fog: #F2F2F2
+$c_fog200: #E6E6E6
+$c_fog300: #D7D7D7
+
+$c_seafoam60: scale-color($c_seafoam, white, 60%);
+$c_seafoam20: scale-color($c_seafoam, white, 20%);
+
+$c_salmon60: scale-color($c_salmon, white, 60%);
+$c_salmon20: scale-color($c_salmon, white, 20%);
+
+
 @import "reset.sass"
 
 @import "base.sass"
