--- a/source-assets/styles2020/sass/base.sass
+++ b/source-assets/styles2020/sass/base.sass
@@ -11,17 +11,17 @@
 // Selection colour, the unprefixed Webkit version & the -moz-prefixed
 //  version must be on separate lines for it to work.
 ::selection
-  background-color: #7AD4AA
-  color: #000
+  background-color: $c_seafoam
+  color: $c_black
 
 
 ::-moz-selection
-  background-color: #7AD4AA
-  color: #000
+  background-color: $c_seafoam
+  color: $c_black
 
 
 body
-  background-color: #FFF
+  background-color: $c_white
   font-family: 'Open Sans', 'DejaVu Sans', 'Verdana', sans-serif
   line-height: 140%
 
@@ -127,6 +127,6 @@ body
 
 
 #_white-bg
-  background-color: #FFF
+  background-color: $c_pine
   min-width: 190px
   z-index: 5
