suse2021/html: initial color, font, image updates
It's a bit too busy right now, this design needs to be toned
down.

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -1,5 +1,11 @@
 @charset "utf-8.sass"
 
+// Fonts
+
+$f_sans: Poppins, Roboto, sans-serif
+$f_mono: 'DejaVu Sans Mono', 'DejaVuSansMono', 'Menlo', 'Andale Mono', monospace
+
+
 // Colors
 
 $c_white:        rgb(255, 255, 255)
