--- a/source-assets/styles2021/sass/bottom-share-print.sass
+++ b/source-assets/styles2021/sass/bottom-share-print.sass
@@ -46,7 +46,7 @@
 
 
 .nav-label
-  color: #333
+  color: $c_pine
   display: block
   height: 36px
   line-height: 36px
@@ -57,12 +57,11 @@
 .nav-link:hover > .nav-label,
 .nav-link:focus > .nav-label,
 .nav-link:active > .nav-label
-  color: #439239
+  color: $c_jungle
 
 
 .bottom-button
-  background-color: #EFEFF0
-  border-radius: 3px
+  background-color: $c_fog
   border: 1px solid rgba(20,20,20,0.2)
   color: #333
   cursor: pointer
@@ -81,7 +80,6 @@
 ._share-in:before,
 ._share-mail:before,
 ._share-tw:before,
-  border-radius: 2px 0 0 2px
   border: 1px solid rgba(20,20,20,0.2)
   content: " "
   display: block
