--- a/source-assets/styles2021/sass/responsive.sass
+++ b/source-assets/styles2021/sass/responsive.sass
@@ -53,7 +53,6 @@
 
 
   #_find-input
-    border-radius: 3px
     border: 1px solid #CDE8A8
     font-size: 13px
     height: 20px
@@ -143,7 +142,7 @@
 
 
   #_nav-area
-    border-top: 1px solid #7DC24D
+    border-top: 1px solid $c_mint_60
 
 
   .nav-inner > .tool-spacer
@@ -250,7 +249,7 @@
 
   #_bubble-toc .active ol,
   #_bubble-toc ol
-    background-color: #333
+    background-color: $c_fog_200
     border: none
     width: 100%
 
@@ -323,7 +322,7 @@
 
   .back-icon
     background-position: -120px -87px
-    display: block
+    display: inline-block !important
     height: 24px
     width: 24px
 
@@ -335,7 +334,7 @@
 
 
   #_toc-area .bubble h6
-    background-color: #333
+    background-color: $c_fog_200
     left: 0
     padding-left: 10px
     padding-right: 10px
@@ -348,7 +347,7 @@
 
 
   #_toc-bubble-wrap
-    background-color: #333
+    background-color: $c_fog_200
     height: 100%
     left: 0
     position: fixed
