--- a/source-assets/styles2021/sass/footer.sass
+++ b/source-assets/styles2021/sass/footer.sass
@@ -11,7 +11,7 @@
 
 
 #_footer-wrap
-  background-color: #EFEFF0
+  background-color: $c_pine
   overflow: hidden
   width: 100%
 
@@ -30,7 +30,6 @@
 // Footer contents
 
 #_footer
-  font-family: Helvetica, FreeSans, sans-serif
   margin: 0 auto
   max-width: 988px
   min-width: 130px
@@ -46,22 +45,23 @@
 #_footer li
   display: block
   float: left
-  font-size: 12px
+  font-size: 14px
   line-height: 80px
   margin: 0 30px 0 0
 
 
 #_footer a
-  color: #666
+  color: $c_white
+  font-weight: 700
   text-decoration: none
 
 
 #_footer a:active,
 #_footer a:focus,
 #_footer a:hover
-  color: #76AD2D
+  color: $c_white
   text-decoration: underline
 
 
 #_footer > p
-  color: #333
+  color: $c_white
