wip wip wipleiben sad

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -44,6 +44,8 @@ $c_mint_30:      rgb(227, 248, 241)
 
 @import "nav-toolbar.sass"
 
+@import "nav-toc.sass"
+
 @import "bottom-share-print.sass"
 
 @import "footer.sass"
