--- a/suse2021-ns/static/css/style.css
+++ b/suse2021-ns/static/css/style.css
@@ -535,11 +535,261 @@ body {
   float: right;
   height: 56px; }
 
-.bubble,
 .nav-inner > a.tool-spacer,
 .tool {
-  -webkit-transition: all 0.2s ease-in-out 0.1s;
-  -moz-transition: all 0.2s ease-in-out 0.1s;
+  transition: all 0.2s ease-in-out 0.1s; }
+
+.active .active-contents,
+.inactive .inactive-contents {
+  display: block; }
+
+.active .inactive-contents,
+.inactive .active-contents {
+  display: none; }
+
+.active-contents {
+  position: relative;
+  z-index: 6; }
+
+#_nav-area {
+  width: 40%; }
+
+#_find-area,
+#_toc-area {
+  width: 30%; }
+
+.pad-tools-50-out {
+  float: left;
+  left: 50%;
+  position: relative; }
+
+.pad-tools-50-in {
+  float: left;
+  left: -50%;
+  position: relative; }
+
+.tool-label {
+  color: #FFF;
+  display: block;
+  float: left;
+  font-weight: normal;
+  line-height: 56px;
+  vertical-align: middle; }
+
+#_toc-area-button > .tool-label,
+.pad-tools-50-in > .tool-label {
+  padding: 0 0 0 10px; }
+
+.nav-inner > .tool-label {
+  padding: 0 10px 0 0; }
+
+.nav-inner {
+  float: right; }
+
+#_toolbar .tool-spacer {
+  display: block;
+  float: left;
+  padding: 10px; }
+
+.button > .tool-spacer {
+  display: block;
+  margin: 0;
+  padding: 0; }
+
+.inactive #_find-area-button:active,
+.inactive #_find-area-button:focus,
+.inactive #_find-area-button:hover,
+.inactive #_toc-area-button:active,
+.inactive #_toc-area-button:focus,
+.inactive #_toc-area-button:hover,
+.nav-inner > a.tool-spacer:active,
+.nav-inner > a.tool-spacer:focus,
+.nav-inner > a.tool-spacer:hover {
+  background-color: rgba(255, 255, 255, 0.1); }
+
+.active > .tool {
+  background-color: rgba(255, 255, 255, 0.3); }
+
+.find-icon,
+.nav-inner .next-icon,
+.nav-inner .prev-icon,
+.toc-icon,
+.tools-icon {
+  display: block;
+  float: left; }
+
+.toc-icon {
+  background-position: -144px 0px; }
+
+.active .toc-icon,
+a:active > .toc-icon,
+a:focus > .toc-icon,
+a:hover > .toc-icon {
+  background-position: -144px -36px; }
+
+.find-icon {
+  background-position: -180px 0px; }
+
+.active .find-icon,
+a:active > .find-icon,
+a:focus > .find-icon,
+a:hover > .find-icon {
+  background-position: -180px -36px; }
+
+.nav-inner > a > .prev-icon {
+  background-position: -252px 0px; }
+
+.nav-inner > span > .prev-icon {
+  background-position: -324px 0px; }
+
+.nav-inner > a:active > .prev-icon,
+.nav-inner > a:focus > .prev-icon,
+.nav-inner > a:hover > .prev-icon {
+  background-position: -252px -36px; }
+
+.nav-inner > a > .next-icon {
+  background-position: -288px 0px; }
+
+.nav-inner > span > .next-icon {
+  background-position: -324px -36px; }
+
+.nav-inner > a:active > .next-icon,
+.nav-inner > a:focus > .next-icon,
+.nav-inner > a:hover > .next-icon {
+  background-position: -288px -36px; }
+
+#_find-area form {
+  margin: 0 0 0 50% !important; }
+
+.find-form {
+  display: block;
+  margin: 0 0 0 -110px;
+  padding: 10px;
+  width: 200px; }
+
+#_find-input {
+  background-color: #FFF;
+  border: 1px solid #7AD4AA;
+  display: block;
+  float: left;
+  font: 16px Poppins, Roboto, sans-serif;
+  height: 34px;
+  padding: 0 20px 0 5px;
+  width: 155px;
+  z-index: 0; }
+
+#_find-input:focus {
+  background-color: #FFF;
+  border: 1px solid #FFF; }
+
+#_find-input:focus + #_find-button {
+  background-position: -180px 0px !important; }
+
+#_find-button {
+  background-color: transparent;
+  background-position: -180px 0px;
+  border: 0;
+  display: block;
+  float: left;
+  margin: 0 0 0 -18px;
+  width: 36px; }
+
+#_find-button:active,
+#_find-input:focus + #_find-button:hover {
+  background-position: -180px -36px !important; }
+
+button::-moz-focus-inner,
+button:focus::-moz-focus-inner {
+  border: none; }
+
+#_find-input-label {
+  color: #666;
+  cursor: text;
+  display: none;
+  float: left;
+  font-style: italic;
+  height: 36px;
+  left: 5px;
+  line-height: 36px;
+  position: relative;
+  top: -36px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: 2; }
+
+#_fixed-header-wrap {
+  background-color: #0c322c;
+  border-bottom: 1px solid #CCC;
+  box-shadow: 0 5px 5px #FFF;
+  line-height: 100%;
+  padding: .7rem 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3; }
+
+#_fixed-header {
+  display: block;
+  font-size: 12px;
+  margin: 0 auto;
+  max-width: 998px;
+  min-width: 130px; }
+
+.buttons {
+  display: block;
+  float: right;
+  margin: 0 10px 0 5px; }
+
+.button {
+  margin-left: 10px; }
+
+.button > .tool-spacer {
+  display: block;
+  float: left; }
+
+.button {
+  float: left; }
+
+.button .next-icon,
+.button .prev-icon {
+  display: block;
+  margin: 1px 0;
+  width: 18px; }
+
+.top-button {
+  color: white; }
+
+.top-button:active,
+.top-button:focus,
+.top-button:hover {
+  color: white;
+  text-decoration: none; }
+
+.button > a > .prev-icon {
+  background-position: -72px -72px; }
+
+.button > span > .prev-icon {
+  background-position: -180px -72px; }
+
+.button > a:active > .prev-icon,
+.button > a:focus > .prev-icon,
+.button > a:hover > .prev-icon {
+  background-position: -90px -72px; }
+
+.button > a > .next-icon {
+  background-position: -144px -72px; }
+
+.button > span > .next-icon {
+  background-position: -198px -72px; }
+
+.button > a:active > .next-icon,
+.button > a:focus > .next-icon,
+.button > a:hover > .next-icon {
+  background-position: -162px -72px; }
+
+.bubble {
   transition: all 0.2s ease-in-out 0.1s; }
 
 .active .active-contents,
@@ -969,6 +1219,19 @@ button:focus::-moz-focus-inner {
 .button > a:focus > .next-icon,
 .button > a:hover > .next-icon {
   background-position: -162px -72px; }
+
+.active-contents.bubble {
+  display: block;
+  position: fixed !important;
+  left: 10px !important;
+  top: 170px !important;
+  width: 300px !important; }
+
+.active-contents.bubble ol {
+  width: 100% !important; }
+
+.active-contents.bubble ol ol {
+  position: static !important; }
 
 .page-bottom {
   margin-bottom: 80px;
