--- a/source-assets/styles2021/sass/base.sass
+++ b/source-assets/styles2021/sass/base.sass
@@ -8,8 +8,8 @@
   width: 100%
 
 
-// Selection colour, the unprefixed Webkit version & the -moz-prefixed
-//  version must be on separate lines for it to work.
+// Selection color, the unprefixed Webkit version & the -moz-prefixed
+// version must be on separate lines for it to work.
 ::selection
   background-color: $c_mint_60
   color: $c_pine
