suse2021: Add initial, Bulmaized SASS components (v.ruff)

--- a/source-assets/styles2021/sass/0-style.sass
+++ b/source-assets/styles2021/sass/0-style.sass
@@ -38,22 +38,26 @@ $c_mint_30:      rgb(227, 248, 241)
 
 @import "reset.sass"
 
-@import "base.sass"
+@import "bulma-0.9.3/bulma/bulma.sass"
 
-@import "nav-header.sass"
+@import "base-bulmaized.sass"
 
-@import "nav-toolbar.sass"
+//@import "base.sass"
 
-@import "nav-toc.sass"
+//@import "nav-header.sass"
 
-@import "bottom-share-print.sass"
+//@import "nav-toolbar.sass"
 
-@import "footer.sass"
+//@import "nav-toc.sass"
 
-@import "content-block.sass"
+//@import "bottom-share-print.sass"
 
-@import "content-inline.sass"
+//@import "footer.sass"
 
-@import "print.sass"
+//@import "content-block.sass"
 
-@import "responsive.sass"
+//@import "content-inline.sass"
+
+//@import "print.sass"
+
+//@import "responsive.sass"
