--- a/source-assets/styles2021/sass/old/content-inline.sass
+++ b/source-assets/styles2021/sass/old/content-inline.sass
@@ -1225,3 +1225,7 @@ p.ds-message
 
 .hidden .hidden:before
   content: none
+
+
+.draft
+  background: #FFF url(../images/draft.png) no-repeat fixed left 50%
